cria classe DTO para entidade Filme